# wf-analyzer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/fetcher/reqwest/: mod.rs
src/fetcher/reqwest/openmeteo/: mod.rs  v1.rs
src/filters/: humidity.rs  mod.rs  temperature.rs  visibility.rs  wind.rs
src/openmeteo/v1/: mod.rs
