[package]
name = "wf_analyzer"
version = "0.1.0"
edition = "2021"
description = "Analyzer of weather forecasts for given longitude and latitude"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rust_decimal = "1.27"
itertools="0.10"
chrono = "0.4"